printscript-validator/src/test/resources/1.1/invalid-type-readInput-argument/golden.ps
1:27-1:31 -> Error (Incorrect Method Call): readInput() argument must be a string literal